--- a/Soal APP.cbp
+++ b/Soal APP.cbp
@@ -2,28 +2,29 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Soal APP tester" />
+		<Option title="Soal APP" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Soal APP tester" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Soal APP" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
-					<Add directory="include" />
 				</Compiler>
+				<Linker>
+					<Add option="-lwinmm" />
+				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Soal APP tester" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Soal APP" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add directory="include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -34,9 +35,6 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="include/soal.h" />
-		<Unit filename="include/tes soal.h" />
-		<Unit filename="include/testerr.h" />
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
